# genai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.claude/tsc-cache/3bfbdddc-e1bf-48e9-a139-82d26c74a67b/: affected-repos.txt
docs/superpowers/plans/: 2026-03-27-genai-cli.md
docs/superpowers/specs/: 2026-03-27-genai-cli-design.md
src/: agent.rs  error.rs  main.rs  models.rs  output.rs
src/providers/: fal.rs  mod.rs  openai.rs
