[package]
name = "genai-media"
version = "0.1.0"
edition = "2024"
description = "AI image and video generation CLI — fal.ai + OpenAI"
license = "MIT"
repository = "https://github.com/199-biotechnologies/genai"

[[bin]]
name = "genai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
thiserror = "2"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
base64 = "0.22"
dirs = "6"
